--- a/peformance_dashboard_prototype/requirements.txt
+++ b/peformance_dashboard_prototype/requirements.txt
@@ -1,4 +1,7 @@
-streamlit==1.29.0
+streamlit==1.28.0
 pandas==2.1.4
-numpy==1.24.0
+numpy==1.24.4
 plotly==5.17.0
+gspread==5.8.0
+google-auth==2.17.0
+cachetools==5.3.1  # For caching
